Fix (<CardDetails/>): Modify address to align with <AddBusiness /> form
- Adjust overall layout styling

--- a/client/src/components/CardDetails/CardDetails.css
+++ b/client/src/components/CardDetails/CardDetails.css
@@ -11,12 +11,13 @@
 .CardDetails-FigureContainer p {
   margin-top: 0rem;
   line-height: 10px;
-  font-size: 2.18rem;
+  margin: 0 4px 0 4px;
+  font-size: 1.813rem;
 }
 .CardDetails-Image {
   width: 11.25rem;
   height: 11.25rem;
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
 }
 .CardDetails-Name {
   max-width: 15rem;
